version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/MechanicalEnums/Materials/IdentifierType.rst.txt
.. vale off



:class:`IdentifierType`
=======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.MechanicalEnums.Materials.IdentifierType

   Bases: :py:obj:`object`


   
   The primary identifier to use when searching for existing materials. The name and the uuid must
   always be unique across all materials in the database.  There can be
   Name        UUID
   material1   DEA8407F-4029-4919-94F0-5BDC6FBF203A
   material2   7ED99748-4885-4AAA-8600-CE21253325FA

   but not  (same name different UUID)
   material1   DEA8407F-4029-4919-94F0-5BDC6FBF203A
   material1   7ED99748-4885-4AAA-8600-CE21253325FA

   or  (different name same UUID)
   material1   DEA8407F-4029-4919-94F0-5BDC6FBF203A
   material2   DEA8407F-4029-4919-94F0-5BDC6FBF203A

   The reason to use this is if the name of the material changed for a "refresh" (search by UUID) or if the UUID
   needs changed (search by Name).  Either way a material cannot be added which would violate the above rules.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: IdentifierType

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CompareTo`
            - CompareTo method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~GetTypeCode`
            - GetTypeCode method.
          * - :py:attr:`~HasFlag`
            - HasFlag method.
          * - :py:attr:`~ToString`
            - ToString method.












Method detail
-------------
.. py:method:: CompareTo(target: Any) -> int

   
   CompareTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetTypeCode() -> typeCode

   
   GetTypeCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: HasFlag(flag: System.Enum) -> bool

   
   HasFlag method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on